--- a/style/cookbook_style.css
+++ b/style/cookbook_style.css
@@ -4,8 +4,21 @@
 	border:0;
 }
 #container {
-	min-width: 500px;
+	max-width: 960px;
 	margin:0 auto;
-	background-color: #333333;
+	background-color: #CCCCCC;
+	min-height:500px;
+}
+
+header nav ul {
+	float:right;
 	
+}
+header nav ul li {
+	list-style-type: none;
+	min-height: 50px;
+}
+nav ul li a {
+	text-decoration: none;
+	color:black;
 }
